# ScoutsDataManager

./: LOCAL_SETUP_GUIDE.md  README.md  app.py  config.py  forms.py  helpers.py  init_db.py  main.py  models.py  pyproject.toml  requirements_list.txt  routes.py  script.py  script2.py
attached_assets/: Pasted--NameError-NameError-name-GenericText-is-not-defined-Traceback-most-recent-call-last-File-1745575199219.txt  Pasted--NameError-NameError-name-send-file-is-not-defined-Traceback-most-recent-call-last-File--1745574209742.txt  Pasted-NameError-NameError-name-ChangePasswordForm-is-not-defined-Traceback-most-recent-call-last-Fil-1745575950375.txt  Pasted-NameError-NameError-name-TablePermission-is-not-defined-Traceback-most-recent-call-last-File--1745577832832.txt  Pasted-NameError-NameError-name-table-is-not-defined-Traceback-most-recent-call-last-File-home-runn-1745826521270.txt  Pasted-OSError-OSError-No-wkhtmltopdf-executable-found-b-If-this-file-exists-please-check-that-this-p-1745578786079.txt  Pasted-OSError-OSError-No-wkhtmltopdf-executable-found-b-If-this-file-exists-please-check-that-this-p-1745579804584.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-table-f-1745836933700.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-sqlite3-OperationalError-no-such-column-table-f-1745837089571.txt  Pasted-TemplateSyntaxError-jinja2-exceptions-TemplateSyntaxError-Encountered-unknown-tag-endfor-Jinja-w-1745840342864.txt  (+1 more)
instance/: scout_manager.db
templates/: add_record.html  base.html  dashboard.html  (+15 more)
(+5 files in other folders)
