[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.2",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "gunicorn>=23.0.0",
    "pandas>=2.2.3",
    "pdfkit>=1.0.0",
    "psycopg2-binary>=2.9.10",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "wkhtmltopdf>=0.2",
    "wtforms>=3.2.1",
    "xlsxwriter>=3.2.3",
    "xvfbwrapper==0.2.9",
]
